--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  /* background-color: #282c34;
+  color: white; */
+  padding: 80px;
+  font-family: Arial;
+  text-align: left;
+}
+
+.App{
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+.box{
+  margin: 10px;
+  padding: 20px;
+  border: 2px solid salmon;
+  text-align: center;
+  color: salmon;
+}
